...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.phonenumberspinner.MainActivity">

    <EditText
        android:id="@+id/editText_main"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/hint_phonenumber"
...
