...
    <string name="label_text_password">Password</string>
    <string name="hint_text_email">example@ranken.edu</string>
    <string name="hint_text_password">P@ssw0rd</string>
    <string name="autofill_hint_email">Enter email address</string>
    <string name="edit_hint_email">example@ranken.edu</string>
    <string name="edit_hint_password">P@ssw0rd</string>
    <string name="invalid_email_or_password_error_msg">Incorrect Email and/or Password</string>

    <!--Home Activity-->
    <string name="title_activity_home">@string/app_name</string>
    <string name="topic_java">Java</string>
    <string name="topic_android">Android</string>
    <string name="topic_webdev">WebDev</string>
...
    <string name="calendar_image_description">Pick Date from Calendar Image</string>
    <string name="edit_hint_article_title">Ex: Modern Java - Learn Java 8 features by doing it</string>
    <string name="edit_hint_article_author">Ex: Dilip S</string>
    <string name="edit_hint_date_published">Ex: 8/01/2019</string>
    <string name="edit_hint_article_link">Ex: https://www.udemy.com/course/modern-java-learn-java-8-features-by-coding-it/</string>
    <string name="alert_dialog_error_title_text">Invalid Input</string>
    <string name="alert_dialog_error_message">Please complete all fields</string>
    <string name="edit_published_date_format_string">%1$d/%2$d/%3$d</string>
    <string name="alert_dialog_invalid_date_message">Please Enter Date in Correct Format (EX: 12/15/2019)</string>
    <string name="bad_url_msg">Sorry, this is a bad link.</string>

    <string-array name="topics">
        <item>@string/topic_java</item>
...
