<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".AddArticleActivity"
    tools:showIn="@layout/activity_add_article">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/label_article_title"
                android:layout_width="@dimen/fill_width"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/horizontal_margin"
                android:layout_marginTop="@dimen/vertical_margin"
                android:layout_marginEnd="@dimen/horizontal_margin"
                android:text="@string/label_text_article_title"
                android:textSize="@dimen/label_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edit_article_title"
                android:layout_width="@dimen/fill_width"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/horizontal_margin"
                android:layout_marginTop="@dimen/vertical_margin"
                android:layout_marginEnd="@dimen/horizontal_margin"
                android:hint="@string/edit_hint_article_title"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textSize="@dimen/edit_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_article_title" />

            <TextView
                android:id="@+id/label_article_author"
                android:layout_width="@dimen/fill_width"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/horizontal_margin"
                android:layout_marginTop="@dimen/vertical_margin"
                android:layout_marginEnd="@dimen/horizontal_margin"
                android:text="@string/label_text_article_author"
                android:textSize="@dimen/label_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_article_title" />

            <EditText
                android:id="@+id/edit_article_author"
                android:layout_width="@dimen/fill_width"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/horizontal_margin"
                android:layout_marginTop="@dimen/vertical_margin"
                android:layout_marginEnd="@dimen/horizontal_margin"
                android:hint="@string/edit_hint_article_author"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textSize="@dimen/edit_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_article_author" />

            <TextView
                android:id="@+id/label_article_pub_date"
                android:layout_width="@dimen/fill_width"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/horizontal_margin"
                android:layout_marginTop="@dimen/vertical_margin"
                android:layout_marginEnd="@dimen/horizontal_margin"
                android:text="@string/label_text_published_date"
                android:textSize="@dimen/label_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_article_author" />

            <EditText
                android:id="@+id/edit_date_published"
                android:layout_width="@dimen/fill_width"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/horizontal_margin"
                android:layout_marginTop="@dimen/vertical_margin"
                android:clickable="false"
                android:hint="@string/edit_hint_date_published"
                android:importantForAutofill="no"
                android:inputType="date"
                android:onClick="chooseDate"
                android:textSize="@dimen/edit_text_size"
                app:layout_constraintEnd_toStartOf="@+id/image_calendar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_article_pub_date" />

            <ImageView
                android:id="@+id/image_calendar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/calendar_image_description"
                android:focusable="false"
                android:onClick="chooseDate"
                app:layout_constraintBottom_toBottomOf="@+id/edit_date_published"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/edit_date_published"
                app:srcCompat="@drawable/ic_calendar" />

            <TextView
                android:id="@+id/label_article_topic"
                android:layout_width="@dimen/fill_width"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/horizontal_margin"
                android:layout_marginTop="@dimen/vertical_margin"
                android:layout_marginEnd="@dimen/horizontal_margin"
                android:text="@string/label_text_topic"
                android:textSize="@dimen/label_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_date_published" />

            <Spinner
                android:id="@+id/spinner_article_topics"
                android:layout_width="@dimen/fill_width"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/horizontal_margin"
                android:layout_marginTop="@dimen/vertical_margin"
                android:layout_marginEnd="@dimen/horizontal_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_article_topic"/>

            <TextView
                android:id="@+id/label_article_link"
                android:layout_width="@dimen/fill_width"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/horizontal_margin"
                android:layout_marginTop="@dimen/vertical_margin"
                android:layout_marginEnd="@dimen/horizontal_margin"
                android:text="@string/label_text_link"
                android:textSize="@dimen/label_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinner_article_topics" />

            <EditText
                android:id="@+id/edit_article_link"
                android:layout_width="@dimen/fill_width"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/horizontal_margin"
                android:layout_marginTop="@dimen/vertical_margin"
                android:layout_marginEnd="@dimen/horizontal_margin"
                android:hint="@string/edit_hint_article_link"
                android:importantForAutofill="no"
                android:inputType="textUri"
                android:textSize="@dimen/edit_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_article_link" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>