...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:transitionName="sportsImageTransition"/>

        <TextView
            android:id="@+id/title"
            style="@style/SportsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/sportsImage"
            android:padding="8dp"
            android:text="@string/title_placeholder"
...
